# line-matcher

./: CMakeLists.txt  README  line-matcher.sln
line-matcher/include/converter/: convcpp.h
line-matcher/include/core/: DirWalker.hpp  FileReader.h  FileReaderFactory.hpp  IDirWalker.h  IFileReader.h  IFileReaderFactory.h  IOutput.h  LineMatcher.h  Output.hpp
line-matcher/src/: CMakeLists.txt
line-matcher/src/converter/: CMakeLists.txt  convcpp.h  converter.vcxproj  converter.vcxproj.filters  github.txt
line-matcher/src/core/: CMakeLists.txt  DirWalker.hpp  FileReader.h  FileReaderFactory.hpp  IDirWalker.h  IFileReader.h  IFileReaderFactory.h  IOutput.h  LineMatcher.cpp  LineMatcher.h  Output.hpp  core.vcxproj  core.vcxproj.filters
line-matcher/src/line-matcher/: CMakeLists.txt  line-matcher.vcxproj  main.cpp
line-matcher/tests/: CMakeLists.txt  main.cpp  mocks.hpp
